--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "element-resize-detector": "^1.1.15",
     "element-ui": "^2.8.2",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.4.1",
     "nprogress": "^0.2.0",
     "quill": "^1.3.6",
     "vee-validate": "^2.2.9",
     "vue": "^2.2.2",
+    "vue-cropper": "^0.4.9",
     "vue-i18n": "^8.11.2",
     "vue-router": "^2.3.0",
-    "vuex": "^2.0.0-rc.6"
+    "vuex": "^2.0.0-rc.6",
+    "vux": "^2.9.4"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
