--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "echarts": "^3.3.2",
     "element-resize-detector": "^1.1.15",
     "element-ui": "^2.8.2",
+    "file-saver": "^2.0.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
     "nprogress": "^0.2.0",
@@ -24,7 +25,8 @@
     "vue-i18n": "^8.11.2",
     "vue-router": "^2.3.0",
     "vuex": "^2.0.0-rc.6",
-    "vux": "^2.9.4"
+    "vux": "^2.9.4",
+    "xlsx": "^0.14.3"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
@@ -57,6 +59,7 @@
     "ora": "^1.0.0",
     "rimraf": "^2.6.0",
     "sass-loader": "^6.0.0",
+    "script-loader": "^0.7.2",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "url-loader": "^0.5.8",
