--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vue": "^2.2.2",
     "vue-cropper": "^0.4.9",
     "vue-i18n": "^8.11.2",
+    "vue-print-nb": "^1.3.0",
     "vue-router": "^2.3.0",
     "vuex": "^2.0.0-rc.6",
     "vux": "^2.9.4",
