--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
     "nprogress": "^0.2.0",
+    "print-js": "^1.0.61",
     "quill": "^1.3.6",
     "vee-validate": "^2.2.9",
     "vue": "^2.2.2",
